# ReversiITU

./: CMakeLists.txt  README.md
src/: board_init.txt  main.cpp  old_main.cpp
